# syncservers

./: .gitignore  LICENSE.MD  README.md  pyproject.toml
config/: syncservers.ini
syncservers/: __init__.py  app.py  async_command.py  async_task_queue.py  config.py  recursive_watcher.py  retry_queue.py  sync_server.py  syncs.py
tests/: __init__.py  test_async_command.py  test_async_task_queue.py  test_config.py  test_recursive_watcher.py  test_retry_queue.py  test_sync_server.py  test_syncs.py
tests/config/: test_config.ini
tests/rsyncd/: rsyncd.conf
