[project]
name = "syncservers"
version = "1.0.0"
authors = [
  { name="Zhuo Wang", email="zhuowang10@gmail.com" },
]
description = "instantly sync data among home servers"
readme = "README.md"
requires-python = ">=3.7, <4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncinotify>=4.0.9",
    "asynclcron>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["syncservers"]
exclude = ["docs", "tests", "config", "logs", "venv", "build"]

[project.urls]
Homepage = "https://github.com/zhuowang10/syncservers"
